--- a/jest-opentelemetry/package.json
+++ b/jest-opentelemetry/package.json
@@ -18,8 +18,11 @@
 		"typescript": "^5.3.2"
 	},
 	"dependencies": {
+		"@grpc/grpc-js": "^1.9.12",
+		"@grpc/proto-loader": "^0.7.10",
 		"@traceloop/jest-environment-otel": "^0.8.0",
-		"@traceloop/jest-opentelemetry": "^0.8.0"
+		"@traceloop/jest-opentelemetry": "^0.8.0",
+		"ts-proto": "^1.165.0"
 	},
 	"type": "commonjs"
 }
