--- a/jest-opentelemetry/package.json
+++ b/jest-opentelemetry/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "jest"
+		"test": "TRACELOOP_URL='http://localhost:4123/v1/traces' FRONTEND_SERVICE_ADDR='http://host.docker.internal:8080' RECOMMENDATION_SERVICE_ADDR='localhost:8083' jest --detectOpenHandles"
 	},
 	"keywords": [],
 	"author": "",
@@ -22,6 +22,7 @@
 		"@grpc/proto-loader": "^0.7.10",
 		"@traceloop/jest-environment-otel": "^0.8.0",
 		"@traceloop/jest-opentelemetry": "^0.8.0",
+		"crypto": "^1.0.1",
 		"ts-proto": "^1.165.0"
 	},
 	"type": "commonjs"
